--- a/package.json
+++ b/package.json
@@ -6,26 +6,28 @@
     "dev": "concurrently \"vite\" \"npm run server\"",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 3001 --routes routes.json",
+    "server": "json-server --watch db.json --port 3000 --routes routes.json",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.14.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
+    "react-hook-form": "^7.45.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@types/react-router-dom": "5.3.3",
-    "concurrently": "8.2.0",
-    "json-server": "0.17.3",
-    "typescript": "5.4.2",
-    "vite": "5.2.1",
-    "tailwindcss": "3.5.5",
-    "postcss": "8.4.27",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-plugin-react": "7.33.2"
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
+    "concurrently": "^8.2.0",
+    "json-server": "^0.17.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.1",
+    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.27",
+    "autoprefixer": "^10.4.14",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
